<resources>
    <string name="app_name">PostMaker</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>

    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="choose_one">Choose one</string>
    <string name="Let_me_recommend_you_this_application">Let me recommend you this application</string>
    <string name="play_more_app">https://play.google.com/store/apps/</string>

    <string name="home">Home</string>
    <string name="work">Work</string>
    <string name="profile">Profile</string>
    <string name="setting">Setting</string>

    <string name="ok">Ok</string>
    <string name="save">Save</string>
    <string name="share_to">Share to</string>
    <string name="noData">No data found</string>

    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="address">Address</string>
    <string name="website">Website</string>
    <string name="submit">Submit</string>

    <string name="please_enter_name">Please enter name</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="please_enter_phoneNo">Please enter phone no</string>
    <string name="please_enter_web">Please enter website</string>
    <string name="please_enter_address">Please enter address</string>
    <string name="your_data_update">Your data update successfully</string>
    <string name="your_data_insert">Your data insert successfully</string>

    <string name="rate_app">Rate App</string>
    <string name="more_app">More App</string>
    <string name="share_app">Share App</string>
    <string name="about_us">About Us</string>
    <string name="privacy_policy">Privacy Policy</string>

    <string name="app_name_about_us">Instance</string>
    <string name="about_us_version">Verson</string>
    <string name="about_us_version_text">1.0</string>
    <string name="about_us_email">Email</string>
    <string name="about_us_email_text">abcd@gmail.com</string>
    <string name="about_us_about">About</string>
    <string name="about_us_detail">About</string>

    <string name="mb">Mb</string>
    <string name="cash_file">Cash file</string>
    <string name="clear_cash_memory">Clear cash memory</string>

    <string name="them">Theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="system_default">System default</string>
    <string name="cancel">CANCEL</string>

</resources>