<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBg">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView_setting"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView_cash_title_setting"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="10dp"
                android:text="@string/clear_cash_memory"
                android:textColor="@color/textView_setting"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/imageView_clear_setting"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView_cash_setting"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/app_name"
                android:textColor="@color/textView_sub_setting"
                app:layout_constraintEnd_toEndOf="@+id/textView_cash_title_setting"
                app:layout_constraintStart_toStartOf="@+id/textView_cash_title_setting"
                app:layout_constraintTop_toBottomOf="@+id/textView_cash_title_setting" />

            <ImageView
                android:id="@+id/imageView_clear_setting"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/cleaning"
                app:layout_constraintBottom_toBottomOf="@+id/textView_cash_setting"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView_cash_title_setting" />

            <View
                android:id="@+id/view_them_setting"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:background="@color/view_setting"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_cash_setting" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/con_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/view_them_setting">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/night_mode"
                    app:layout_constraintBottom_toBottomOf="@+id/textView_themName_setting"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView_them_setting" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/textView_them_setting"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/them"
                    android:textColor="@color/textView_setting"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/textView_themName_setting"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/app_name"
                    android:textColor="@color/textView_sub_setting"
                    app:layout_constraintEnd_toEndOf="@+id/textView_them_setting"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/textView_them_setting"
                    app:layout_constraintTop_toBottomOf="@+id/textView_them_setting" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/view_shareApp_setting"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:background="@color/view_setting"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/con_setting" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView_shareApp_setting"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="15dp"
                android:paddingEnd="10dp"
                android:paddingBottom="15dp"
                android:text="@string/share_app"
                android:textColor="@color/textView_setting"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view_shareApp_setting" />

            <View
                android:id="@+id/view_rateApp_setting"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@color/view_setting"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_shareApp_setting" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView_rateApp_setting"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="15dp"
                android:paddingEnd="10dp"
                android:paddingBottom="15dp"
                android:text="@string/rate_app"
                android:textColor="@color/textView_setting"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view_rateApp_setting" />

            <View
                android:id="@+id/view_moreApp_setting"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@color/view_setting"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_rateApp_setting" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView_moreApp_setting"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="15dp"
                android:paddingEnd="10dp"
                android:paddingBottom="15dp"
                android:text="@string/more_app"
                android:textColor="@color/textView_setting"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view_moreApp_setting" />


            <View
                android:id="@+id/view_about_setting"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@color/view_setting"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_moreApp_setting" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView_aboutUs_setting"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="15dp"
                android:paddingEnd="10dp"
                android:paddingBottom="15dp"
                android:text="@string/about_us"
                android:textColor="@color/textView_setting"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view_about_setting" />

            <View
                android:id="@+id/view_privacy_setting"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@color/view_setting"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_aboutUs_setting" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView_privacy_setting"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="15dp"
                android:paddingEnd="10dp"
                android:paddingBottom="15dp"
                android:text="@string/privacy_policy"
                android:textColor="@color/textView_setting"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view_privacy_setting" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>